cluster/longhorn/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-ingress
  namespace: longhorn-system
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`longhorn.alvaronl.com`)
      kind: Rule
      priority: 10
      services:
        - name: longhorn-frontend
          port: 80
